force-app/main/default/objects/AI_GPTfy_Warehouse__c/AI_GPTfy_Warehouse__c.object-meta.xml
<CustomObject>
    <label>GPTfy Warehouse</label>
    <pluralLabel>GPTfy Warehouses</pluralLabel>
    <nameField>
        <displayFormat>GW-{0000000}</displayFormat>
        <label>Warehouse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>