force-app/main/default/objects/AI_GPTfy_Warehouse__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <description>Sub type of warehouse entry</description>
    <type>Text</type>
    <length>255</length>
</CustomField>