force-app/main/default/objects/AI_GPTfy_Warehouse__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <description>Type of warehouse entry</description>
    <type>Text</type>
    <length>255</length>
</CustomField>