force-app/main/default/objects/AI_GPTfy_Warehouse__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <description>Value stored in warehouse</description>
    <type>LongTextArea</type>
    <length>131000</length>
</CustomField>